# DiveRoast

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrefly.toml
.github/workflows/: ci.yaml  lint_and_test.yaml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentRoastSummary.tsx  AnalyzingScreen.tsx  ChatDrawer.tsx  ChatInterface.tsx  Dashboard.tsx  DashboardHeader.tsx  FileUpload.tsx  MessageBubble.tsx  ProblematicDiveCard.tsx  RangeGauge.tsx  UploadScreen.tsx
frontend/src/hooks/: useChat.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
infra/: artifact_registry.tf  backend.tf  frontend.tf  main.tf  outputs.tf  phoenix.tf  secrets.tf  terraform.tfvars.example  variables.tf
scripts/: gcp.sh
src/: config.py  observability.py
src/agent/: conversation.py  gemini_client.py  system_prompts.py  tools.py
src/analysis/: feature_engineering.py
src/api/: dependencies.py  main.py  models.py
src/api/routes/: chat.py  dashboard.py  upload.py
src/mcp/: server.py
src/parsers/: __init__.py  base.py  subsurface.py
src/pipelines/: dan_ingestion.py  dive_processing.py
src/rag/: ingestion.py  search.py
src/scripts/: seed_prompts.py
tests/: test_agent_tools.py  test_api.py  test_dashboard_route.py  test_feature_engineering.py  test_mcp_server.py  test_parsers.py  test_rag_search.py  test_system_prompts.py
